--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
     </div>
     <p class="hint">نصيحة: لتشغيل تلقائي على الجوال، اترك الصوت مكتوماً ثم اضغط تشغيل لتمكين الصوت.</p>
-    <footer>© حقوق النشر لصاحب الفيديو.</footer>
+    <footer>© تصميم الأستاذ أحمد الضامري| Ahm7d@moe.om.</footer>
   </main>
 
   <script>
